# duckdns-ip-updater

./: Cargo.toml  Makefile  README.md
config/: duckdns-ip-updater.conf
src/: config.rs  error.rs  lib.rs  main.rs  updater.rs
