[package]
name = "duckdns-ip-updater"
version = "1.0.0"
authors = ["Balmath <Balmath@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ureq = { version = "1.0", features = ["charset"] }

[dev-dependencies]
rand = "0.7"